--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,18 @@ body{
   background-color: rgba(0, 0, 0, 0.93);
 }
 
+video {
+  width: 100%;
+  object-fit: fill;
+}
+
 .navbar-fixed{
   position: absolute;
 }
 
 .nav-background{
   background-color: rgba(0, 0, 0, 0.7);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 .nav-wrapper{
@@ -26,8 +31,12 @@ body{
   padding-top: 120pt;
 }
 
+.services-container{
+  margin: 15px 75px;
+}
+
 .services-text{
-  color: rgba(255,255,255,0.7);;
+  color: rgba(255,255,255,0.75);;
 }
 
 p {
@@ -41,7 +50,7 @@ p {
 .parallax-container {
   min-height: 380px;
   line-height: 0;
-  height: 550px;
+  height: 655px;
   color: rgba(255,255,255,.9);
 }
   .parallax-container .section {
@@ -49,7 +58,7 @@ p {
   }
 
 i.icon-white{
-  color: rgba(255,255,255,0.9);
+  color: rgba(255,255,255,0.8);
 }
 
 @media only screen and (max-width : 992px) {
